--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-     Copyright (C) 2019 The BlissRoms Project
+     Copyright (C) 2019-2020 The BlissRoms Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -374,6 +374,7 @@
     <string name="navigation_bar_home_long_press_title">Home long press action</string>
     <string name="navigation_bar_home_double_tap_title">Home double tap action</string>
     <string name="navigation_bar_app_switch_long_press_title">Recents long press action</string>
+    <string name="navigation_bar_edge_long_swipe_title">Edge long swipe action</string>
 
     <!-- Power menu -->
     <string name="power_menu_title">Power menu</string>
