--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -884,7 +884,11 @@
 
     <!-- Charging animation -->
     <string name="lockscreen_charging_animation_title">LockScreen Charging animation</string>
-    <string name="lockscreen_charging_animation_summary">Display animation on lockscreen when charging</string>
+    <string name="lockscreen_charging_animation_flash">Flash</string>
+    <string name="lockscreen_charging_animation_battery">Battery</string>
+    <string name="lockscreen_charging_animation_drop">Drop</string>
+    <string name="lockscreen_charging_animation_explosion">Explosion</string>
+    <string name="lockscreen_charging_animation_water">Water</string>
 
     <!-- Old mobile type icons -->
     <string name="use_old_mobiletype_title">Small mobile type icon</string>
