Blissify: Add full accent sammy clock style [2/2]
Change-Id: I3e5ffd5d196bec1801b6d63f0cc46e704e6c68b5

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1041,6 +1041,7 @@
     <string name="lockscreen_clock_selection_sammy">Sammy</string>
     <string name="lockscreen_clock_selection_sammy_bold">Sammy (bold)</string>
     <string name="lockscreen_clock_selection_sammy_accent">Sammy accent</string>
+    <string name="lockscreen_clock_selection_sammy_accent_hour">Sammy accent hour</string>
     <string name="lockscreen_clock_selection_sammy_accent_alt">Sammy accent(darker hour)</string>
 
     <!-- lockscreen clock and date font style -->
