Blissify: some tidying up
Change-Id: If77baf36923aa16d15470f057bce3e588faa0d02

--- a/res/xml/blissify_notifications.xml
+++ b/res/xml/blissify_notifications.xml
@@ -27,7 +27,7 @@
     <!-- Edge Light -->
     <PreferenceCategory
         android:key="notification_screen"
-        android:icon="@drawable/ic_settings_leds"
+        android:icon="@drawable/ic_screen"
         android:title="@string/notification_screen_title" >
 
         <com.blissroms.blissify.fragments.notifications.AmbientLightSettingsPreview
