--- a/res/xml/statusbar_advanced_icons.xml
+++ b/res/xml/statusbar_advanced_icons.xml
@@ -21,6 +21,21 @@
         android:layout="@layout/bliss_logo" />
 
     <PreferenceCategory
+        android:key="volte_icon_category"
+        android:icon="@drawable/ic_volte"
+        android:title="@string/volte_icon_title" >
+
+       <com.bliss.support.preferences.SystemSettingListPreference
+            android:key="volte_icon_style"
+            android:title="@string/volte_icon_title"
+            android:entries="@array/status_bar_volte_entries"
+            android:entryValues="@array/status_bar_volte_values"
+            android:summary="%s"
+            android:defaultValue="0"/>
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
         android:key="status_bar_logo"
         android:icon="@drawable/ic_statusbar_icons"
         android:title="@string/status_bar_logo_category" >
@@ -82,45 +97,39 @@
 
     <PreferenceCategory
         android:key="system_icons_category"
-        android:icon="@drawable/ic_statusbar_icons"
+        android:icon="@drawable/ic_network_monitor"
         android:title="@string/system_icons_category" >
-
-       <com.bliss.support.preferences.SystemSettingListPreference
-            android:key="volte_icon_style"
-            android:icon="@drawable/ic_volte"
-            android:title="@string/volte_icon_title"
-            android:entries="@array/status_bar_volte_entries"
-            android:entryValues="@array/status_bar_volte_values"
-            android:summary="%s"
-            android:defaultValue="0"/>
 
         <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="use_old_mobiletype"
-            android:icon="@drawable/ic_network"
             android:title="@string/use_old_mobiletype_title"
             android:summary="@string/use_old_mobiletype_summary"
             android:defaultValue="false" />
 
         <com.bliss.support.preferences.SystemSettingSwitchPreference
-            android:key="show_fourg_icon"
-            android:icon="@drawable/ic_fourg_icon"
-            android:title="@string/show_fourg_icon_title"
-            android:summary="@string/show_fourg_icon_summary"
-            android:defaultValue="false"/>
-
-        <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="data_disabled_icon"
-            android:icon="@drawable/ic_network"
             android:title="@string/data_disabled_icon_title"
             android:summary="@string/data_disabled_icon_summary"
             android:defaultValue="true"/>
 
         <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="roaming_indicator_icon"
-            android:icon="@drawable/ic_roaming_indicator"
             android:title="@string/roaming_indicator_icon_title"
             android:summary="@string/roaming_indicator_icon_summary"
             android:defaultValue="true"/>
+
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
+            android:key="show_fourg_icon"
+            android:title="@string/show_fourg_icon_title"
+            android:summary="@string/show_fourg_icon_summary"
+            android:defaultValue="false"/>
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="bluetooth_battery_category"
+        android:icon="@drawable/ic_bluetooth_battery"
+        android:title="@string/bluetooth_battery_title" >
 
         <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="bluetooth_show_battery"
