--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1734,4 +1734,8 @@
     <string name="theme_type_solarized_dark">Solarized dark</string>
     <string name="theme_type_pitchblack">Pitch black</string>
     <string name="theme_type_dark_grey">Dark Grey</string>
+
+    <!-- Theme Reset Option -->
+    <string name="theme_option_reset_title">Reset Theme Options</string>
+    <string name="theme_option_reset_message">Are you sure you want to reset themes-accent to default?</string>
 </resources>
