Add DarkGrey System Theme [3/3]
Change-Id: I297ac08bd4288b5291967c0207f5758b2be966ca

--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -1867,12 +1867,14 @@
         <item>@string/theme_type_default</item>
         <item>@string/theme_type_solarized_dark</item>
         <item>@string/theme_type_pitchblack</item>
+        <item>@string/theme_type_dark_grey</item>
     </string-array>
 
     <string-array name="theme_type_values">
         <item>0</item>
         <item>1</item>
         <item>2</item>
+        <item>3</item>
     </string-array>
 
 </resources>
