--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1740,4 +1740,5 @@
     <string name="theme_type_default">Stock theme</string>
     <string name="theme_type_solarized_dark">Solarized dark</string>
     <string name="theme_type_pitchblack">Pitch black</string>
+    <string name="theme_type_dark_grey">Dark Grey</string>
 </resources>
