Add DarkGrey System Theme [3/3]
Change-Id: I297ac08bd4288b5291967c0207f5758b2be966ca

--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -1865,6 +1865,7 @@
         <item>@string/theme_type_pitch_black</item>
         <item>@string/theme_type_solarized_dark</item>
         <item>@string/theme_type_pitchblack</item>
+        <item>@string/theme_type_dark_grey</item>
     </string-array>
 
     <string-array name="theme_type_values">
@@ -1872,6 +1873,7 @@
         <item>2</item>
         <item>3</item>
         <item>4</item>
+        <item>5</item>
     </string-array>
 
 </resources>
