--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1733,4 +1733,5 @@
     <string name="theme_type_pitch_black">Google Dark</string>
     <string name="theme_type_solarized_dark">Solarized dark</string>
     <string name="theme_type_pitchblack">Pitch black</string>
+    <string name="theme_type_dark_grey">Dark Grey</string>
 </resources>
