Add DarkGrey System Theme [3/3]
Change-Id: I297ac08bd4288b5291967c0207f5758b2be966ca

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1741,4 +1741,5 @@
     <string name="theme_type_pitch_black">Google Dark</string>
     <string name="theme_type_solarized_dark">Solarized dark</string>
     <string name="theme_type_pitchblack">Pitch black</string>
+    <string name="theme_type_dark_grey">Dark Grey</string>
 </resources>
