--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -1652,6 +1652,7 @@
         <item>@string/theme_type_pitch_black</item>
         <item>@string/theme_type_solarized_dark</item>
         <item>@string/theme_type_pitchblack</item>
+        <item>@string/theme_type_dark_grey</item>
     </string-array>
 
     <string-array name="theme_type_values">
@@ -1659,6 +1660,7 @@
         <item>2</item>
         <item>3</item>
         <item>4</item>
+        <item>5</item>
     </string-array>
 
 </resources>
