--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -412,6 +412,7 @@
         <item>@string/hardware_keys_action_screenshot</item>
         <item>@string/hardware_keys_action_volume_panel</item>
         <item>@string/hardware_keys_action_clear_all_notifications</item>
+        <item>@string/hardware_keys_action_notifications_panel</item>
         <!--
         <item>@string/hardware_keys_action_single_handed_left</item>
         <item>@string/hardware_keys_action_single_handed_right</item>
@@ -457,6 +458,7 @@
         <item>14</item>
         <item>15</item>
         <item>16</item>
+        <item>17</item>
     </string-array>
 
     <string-array name="hardware_keys_action_values_go" translatable="false">
