--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -413,6 +413,8 @@
         <item>@string/hardware_keys_action_volume_panel</item>
         <item>@string/hardware_keys_action_clear_all_notifications</item>
         <item>@string/hardware_keys_action_notifications_panel</item>
+        <item>@string/hardware_keys_action_toggle_qs_panel</item>
+        <item>@string/hardware_keys_action_ringer_modes</item>
         <!--
         <item>@string/hardware_keys_action_single_handed_left</item>
         <item>@string/hardware_keys_action_single_handed_right</item>
@@ -459,6 +461,8 @@
         <item>15</item>
         <item>16</item>
         <item>17</item>
+        <item>18</item>
+        <item>19</item>
     </string-array>
 
     <string-array name="hardware_keys_action_values_go" translatable="false">
