--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -328,6 +328,8 @@
     <string name="hardware_keys_action_notifications_panel">toggle notifications panel</string>
     <string name="hardware_keys_action_toggle_qs_panel">toggle Qs Panel</string>
     <string name="hardware_keys_action_ringer_modes">Ringer modes</string>
+    <string name="hardware_keys_action_next_song">Next song</string>
+    <string name="hardware_keys_action_previous_song">Previous Song</string>
     <string name="hardware_keys_action_single_handed_left">Single hand mode (left)</string>
     <string name="hardware_keys_action_single_handed_right">Single hand mode (right)</string>
     <string name="camera_sleep_on_release_title">Screen peek</string>
