--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -1214,9 +1214,13 @@
         <item>@string/action_voice_search</item>
         <item>@string/action_launch_camera</item>
         <item>@string/action_flashlight</item>
+        <item>@string/action_clear_notifications</item>
         <item>@string/action_volume_panel</item>
         <item>@string/action_screen_off</item>
+        <item>@string/action_notifications</item>
         <item>@string/action_screenshot</item>
+        <item>@string/action_qs_panel</item>
+        <item>@string/action_ringer_modes</item>
     </string-array>
 
     <string-array name="active_edge_actions_values" translatable="false">
@@ -1225,9 +1229,13 @@
         <item>2</item>
         <item>3</item>
         <item>4</item>
+        <item>5</item>
         <item>6</item>
         <item>7</item>
+        <item>8</item>
         <item>9</item>
+        <item>10</item>
+        <item>11</item>
     </string-array>
 
     <string-array name="ambient_notification_light_timeout_entries" translatable="false">
