Allow to show music heads up on new tracks [2/2]
Change-Id: Ibc4a4f4979fbe4c8652a6d9bb0e6025fbafc1459

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1584,4 +1584,8 @@
     <!-- One ui actionbar -->
     <string name="enable_oneui">OneUI</string>
     <string name="enable_oneui_summary">Show spacer above settings actionbar for easier use with one hand\nNOTE: restart settings app to see effect</string>
+
+    <!-- Music Heads Up -->
+    <string name="show_media_heads_up_title">Mostra heads up multimediali</string>
+    <string name="show_media_heads_up_summary">Mostra le heads up multimediali quando una nuova traccia viene riprodotta, se il player non è già in primo piano</string>
 </resources>
