--- a/res/xml/blissify_notifications.xml
+++ b/res/xml/blissify_notifications.xml
@@ -130,6 +130,12 @@
         android:summary="@string/heads_up_notifications_summary"
         android:defaultValue="true" />
 
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
+        android:key="show_media_heads_up"
+        android:title="@string/show_media_heads_up_title"
+        android:summary="@string/show_media_heads_up_summary"
+        android:defaultValue="false" />
+
     </PreferenceCategory>
 
     <!-- Ticker -->
