--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1462,4 +1462,9 @@
     <string name="slim_recents_enter_exit_animation_title">Animation</string>
     <string name="slim_recents_enter_exit_animation_translate">Translate</string>
     <string name="slim_recents_enter_exit_animation_fade">Fade</string>
+
+    <!-- Quick settings on secure lockscreen -->
+    <string name="lockscreen_enable_qs_title">Quick settings</string>
+    <string name="lockscreen_enable_qs_summary">Allow accessing quick settings on secure lockscreen</string>
+
 </resources>
