--- a/res/xml/blissify_lockscreen.xml
+++ b/res/xml/blissify_lockscreen.xml
@@ -109,6 +109,13 @@
         android:title="@string/lockscreen_items_category" >
 
     <com.bliss.support.preferences.GlobalSettingSwitchPreference
+        android:key="lockscreen_enable_qs"
+        android:icon="@drawable/ic_settings_quicksettings"
+        android:title="@string/lockscreen_enable_qs_title"
+        android:summary="@string/lockscreen_enable_qs_summary"
+        android:defaultValue="true" />
+
+    <com.bliss.support.preferences.GlobalSettingSwitchPreference
         android:key="lockscreen_enable_power_menu"
         android:title="@string/lockscreen_enable_power_menu_title"
         android:summary="@string/lockscreen_enable_power_menu_summary"
