Blissify: Make header image height user configurable [2/2]
Change-Id: I728df3dfee92a4b1e98a03e95bd18500871dffca

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -870,6 +870,7 @@
     <string name="file_header_select_summary">Select image from storage</string>
     <string name="file_header_provider_title">Single image</string>
     <string name="file_header_provider" translatable="false">file</string>
+    <string name="status_bar_custom_header_height_title">Image height offset</string>
 
    <!-- Quick Settings -->
     <string name="qs_panel_alpha_title">Quick Settings opacity</string>
