--- a/res/xml/blissify_qs_headers.xml
+++ b/res/xml/blissify_qs_headers.xml
@@ -71,4 +71,12 @@
             settings:units="%"
             android:dependency="status_bar_custom_header" />
 
+        <com.bliss.support.preferences.SystemSettingSeekBarPreference
+            android:key="status_bar_custom_header_height"
+            android:title="@string/status_bar_custom_header_height_title"
+            android:max="100"
+            settings:min="0"
+            android:defaultValue="25"
+            settings:units="dp" />
+
 </PreferenceScreen>
