Blissify : Introduce RGB Gradient Picker [2/2]
Change-Id: I9b37b37721f0f043a46fbcdf4a8e82c25d407174

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1324,6 +1324,8 @@
 
     <!-- Rgb Accenter -->
     <string name="rgb_accenter_title">Rgb Accenter</string>
+    <string name="gradient_color">Gradient picker</string>
+    <string name="gradient_summary">Gradient effect maker</string>
 
     <!-- Accent presets -->
     <string name="accent_preset_0">Bliss</string>
