--- a/res/xml/blissify_themes.xml
+++ b/res/xml/blissify_themes.xml
@@ -57,6 +57,12 @@
             settings:defaultColorValue="0xff1a73e8"
             android:persistent="false" />
 
+        <com.bliss.support.colorpicker.ColorPickerPreference
+            android:key="gradient_color"
+            android:title="@string/gradient_color"
+            settings:defaultColorValue="0xff1a73e8"
+            android:persistent="false" />
+
         <ListPreference
             android:key="android.theme.customization.primary_color"
             android:title="@string/theme_customization_primary_color_title"/>
