--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1742,5 +1742,6 @@
     <string name="theme_type_pitchblack">Pitch black</string>
     <string name="theme_type_dark_grey">Dark Grey</string>
     <string name="theme_type_xtended_clear">Clear Theme</string>
+    <string name="theme_type_material_ocean">Material Ocean</string>
 
 </resources>
