--- a/res/xml/blissify_lockscreen.xml
+++ b/res/xml/blissify_lockscreen.xml
@@ -102,6 +102,29 @@
 
     </PreferenceCategory>
 
+    <!-- LockScreen Date -->
+    <PreferenceCategory
+        android:key="owner_info_category"
+        android:icon="@drawable/ic_clock"
+        android:title="@string/owner_info_category">
+
+    <com.bliss.support.preferences.SystemSettingListPreference
+        android:key="lock_ownerinfo_fonts"
+        android:title="@string/lock_ownerinfo_font_title"
+        android:entries="@array/font_style_entries"
+        android:entryValues="@array/font_style_values"
+        android:defaultValue="4" />
+
+    <com.bliss.support.preferences.SystemSettingSeekBarPreference
+        android:key="lockowner_font_size"
+        android:title="@string/lockowner_font_size_title"
+        android:max="25"
+        settings:min="10"
+        settings:units="dp"
+        android:defaultValue="18" />
+
+    </PreferenceCategory>
+
     <!-- LockScreen Items -->
     <PreferenceCategory
         android:key="lockscreen_items_category"
