--- a/res/xml/blissify_misc.xml
+++ b/res/xml/blissify_misc.xml
@@ -39,7 +39,7 @@
 
     </PreferenceCategory>
 
-    <!-- Agressive battery -->
+    <!-- Agressive battery 
     <PreferenceCategory
         android:key="aggressive_battery"
         android:icon="@drawable/ic_battery"
@@ -66,7 +66,7 @@
         android:defaultValue="true"
         android:disableDependentsState="true" />
 
-    </PreferenceCategory>
+    </PreferenceCategory> -->
 
     <!-- Fingerprint options -->
     <PreferenceCategory
