Blissify: add typeclock usage warning
Change-Id: I58fc43b4c9e19d77b9118b765d44ac7160f50282

--- a/res/xml/blissify_lockscreen.xml
+++ b/res/xml/blissify_lockscreen.xml
@@ -63,6 +63,11 @@
         settings:units="dp"
         android:defaultValue="50" />
 
+    <Preference
+        android:key="clock_font_size_warning"
+        android:selectable="false"
+        android:summary="@string/clock_font_size_warning_summary" />
+
     </PreferenceCategory>
 
     <!-- LockScreen Date -->
