Blissify: add typeclock usage warning
Change-Id: I58fc43b4c9e19d77b9118b765d44ac7160f50282

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1194,6 +1194,7 @@
     <!-- Lockscreen clock font size -->
     <string name="lock_date_font_size_title">Date font size</string>
     <string name="clock_font_size_title">Clock font size</string>
+    <string name="clock_font_size_warning_summary">When using Typeclock clock style use sizes ranging from 20 to 60, beyond 60 is too large for typeclock</string>
 
     <!-- Motion Sense -->
     <string name="aware_settings_title">Motion Sense</string>
