Blissify: Add a summary to Pixel Gestures
Make it look less boring

Change-Id: I737e315c4c41a97da7887f68d83651d31f3674df

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1196,6 +1196,9 @@
     <string name="clock_font_size_title">Clock font size</string>
     <string name="clock_font_size_warning_summary">When using Typeclock clock style use sizes ranging from 20 to 60, beyond 60 is too large for typeclock</string>
 
+    <!-- Pixel Gestures -->
+    <string name="pixelgestures_summary">Configure Pixel Gesture options</string>
+
     <!-- Motion Sense -->
     <string name="aware_settings_title">Motion Sense</string>
     <string name="aware_settings_summary">Configure Motion Sense options</string>
