--- a/res/xml/blissify_gestures.xml
+++ b/res/xml/blissify_gestures.xml
@@ -50,6 +50,7 @@
       <Preference
           android:key="pixel_category"
           android:title="@string/blissify_pixel_gestures_title"
+          android:summary="@string/pixelgestures_summary"
           android:fragment="com.blissroms.blissify.fragments.gestures.PixelGestures"
           android:icon="@drawable/ic_pixelgestures"/>
 
