Blissify: Add shishu nerves clock [2/2]
Change-Id: I40fba5575e48868a45bc3193b0faa6441579bcb7

--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -936,6 +936,7 @@
         <item>@string/lockscreen_clock_selection_sammy_accent</item>
         <item>@string/lockscreen_clock_selection_sammy_accent_hour</item>
         <item>@string/lockscreen_clock_selection_sammy_accent_alt</item>
+        <item>@string/lockscreen_clock_selection_shishu_nerves_clock</item>
     </string-array>
 
     <string-array name="lockscreen_clock_selection_values" translatable="false">
@@ -951,6 +952,7 @@
         <item>10</item>
         <item>11</item>
         <item>12</item>
+        <item>13</item>
     </string-array>
 
     <!-- Font style -->
