--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -485,6 +485,7 @@
 
     <string-array name="torch_long_press_power_timeout_entries" translatable="false">
         <item>@string/torch_long_press_power_timeout_never</item>
+        <item>@string/torch_long_press_power_timeout_30sec</item>
         <item>@string/torch_long_press_power_timeout_1min</item>
         <item>@string/torch_long_press_power_timeout_2min</item>
         <item>@string/torch_long_press_power_timeout_5min</item>
@@ -493,6 +494,7 @@
 
     <string-array name="torch_long_press_power_timeout_values" translatable="false">
         <item>0</item>
+        <item>30</item>
         <item>60</item>
         <item>120</item>
         <item>300</item>
