Blissify: Disable Advance Reboot by default
- Let users enable it if they need.

Signed-off-by: Jackeagle <jackeagle102@gmail.com>
Change-Id: Id7842ff9e1f8a3277c993c4c5cb955ccb46d9ef1

--- a/res/xml/power_menu_settings.xml
+++ b/res/xml/power_menu_settings.xml
@@ -69,7 +69,7 @@
             android:key="advanced_reboot"
             android:title="@string/advanced_reboot_title"
             android:summary="@string/advanced_reboot_summary"
-            android:defaultValue="true" />
+            android:defaultValue="false" />
 
         <lineageos.preference.LineageSecureSettingSwitchPreference
             android:key="advanced_reboot_secured"
