Blissify: Disable Emergency Option on Power Menu by default
Signed-off-by: Jackeagle <jackeagle102@gmail.com>
Change-Id: I12d595556f0cd5f9bf27f62a8b892273591cbfe8

--- a/res/xml/power_menu_settings.xml
+++ b/res/xml/power_menu_settings.xml
@@ -59,7 +59,7 @@
     <com.bliss.support.preferences.GlobalSettingSwitchPreference
         android:key="power_menu_emergency_affordance"
         android:title="@string/power_menu_emergency_title"
-        android:defaultValue="true" />
+        android:defaultValue="false" />
 
     <PreferenceCategory
         android:key="advanced_reboot_key"
