--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -926,7 +926,6 @@
 
     <!-- Lockscreen clock styles -->
     <string-array name="lockscreen_clock_selection_entries" translatable="false">
-        <item>@string/lockscreen_clock_selection_hidden</item>
         <item>@string/lockscreen_clock_selection_digital</item>
         <item>@string/lockscreen_clock_selection_digital_bold</item>
         <item>@string/lockscreen_clock_selection_digital_small</item>
@@ -937,11 +936,13 @@
         <item>@string/lockscreen_clock_selection_sammy_bold</item>
         <item>@string/lockscreen_clock_selection_sammy_accent</item>
         <item>@string/lockscreen_clock_selection_sammy_accent_hour</item>
+        <item>@string/lockscreen_clock_selection_sammy_accent_min</item>
         <item>@string/lockscreen_clock_selection_sammy_accent_alt</item>
         <item>@string/lockscreen_clock_selection_shishu_nerves_clock</item>
     </string-array>
 
     <string-array name="lockscreen_clock_selection_values" translatable="false">
+        <item>0</item>
         <item>1</item>
         <item>2</item>
         <item>3</item>
@@ -954,7 +955,6 @@
         <item>10</item>
         <item>11</item>
         <item>12</item>
-        <item>13</item>
     </string-array>
 
     <!-- Font style -->
@@ -1010,6 +1010,36 @@
         <item>@string/font_grandhotel</item>
         <item>@string/font_redressed</item>
         <item>@string/font_sanfransisco</item>
+        <item>@string/font_bignoodle-italic</item>
+        <item>@string/font_bignoodle-regular</item>
+        <item>@string/font_hanken</item>
+        <item>@string/font_mittelschrift</item>
+        <item>@string/font_reemkufi</item>
+        <item>@string/font_comic-neue-bold</item>
+        <item>@string/font_comic-neue</item>
+        <item>@string/font_exo2-regular</item>
+        <item>@string/font_exo2-semibold</item>
+        <item>@string/font_finlandica</item>
+        <item>@string/font_goodlight</item>
+        <item>@string/font_gravity-regular</item>
+        <item>@string/font_inter-regular</item>
+        <item>@string/font_inter-medium-italic</item>
+        <item>@string/font_league-mono-n-regular</item>
+        <item>@string/font_league-mono-n-medium</item>
+        <item>@string/font_league-mono-n-bold</item>
+        <item>@string/font_league-mono-n-semibold</item>
+        <item>@string/font_leonsans-regular</item>
+        <item>@string/font_mescla-regular</item>
+        <item>@string/font_odibee-sans</item>
+        <item>@string/font_panamericana</item>
+        <item>@string/font_pt-sans</item>
+        <item>@string/font_pt-mono</item>
+        <item>@string/font_rounded-gothic-narrow</item>
+        <item>@string/font_rounded-gothic-narrow-half-italic</item>
+        <item>@string/font_sofia-sans-regular</item>
+        <item>@string/font_sofia-sans-medium</item>
+        <item>@string/font_sofia-semicondensed-regular</item>
+        <item>@string/font_sofia-semicondensed-medium</item>
     </string-array>
 
     <string-array name="font_style_values" translatable="false">
@@ -1064,6 +1094,36 @@
         <item>48</item>
         <item>49</item>
         <item>50</item>
+        <item>51</item>
+        <item>52</item>
+        <item>53</item>
+        <item>54</item>
+        <item>55</item>
+        <item>56</item>
+        <item>57</item>
+        <item>58</item>
+        <item>59</item>
+        <item>60</item>
+        <item>61</item>
+        <item>62</item>
+        <item>63</item>
+        <item>64</item>
+        <item>65</item>
+        <item>66</item>
+        <item>67</item>
+        <item>68</item>
+        <item>69</item>
+        <item>70</item>
+        <item>71</item>
+        <item>72</item>
+        <item>73</item>
+        <item>74</item>
+        <item>75</item>
+        <item>76</item>
+        <item>77</item>
+        <item>78</item>
+        <item>79</item>
+        <item>80</item>
     </string-array>
 
     <!-- QS battery style  -->
