--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -1792,4 +1792,17 @@
         <item>3</item>
     </string-array>
 
+    <!-- QS Tile Tint -->
+    <string-array name="qs_tint_entries" translatable="false">
+        <item>@string/qs_tint_off</item>
+        <item>@string/qs_tint_random</item>
+        <item>@string/qs_tint_accent</item>
+    </string-array>
+
+    <string-array name="qs_tint_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
+
 </resources>
