--- a/res/xml/blissify_qs.xml
+++ b/res/xml/blissify_qs.xml
@@ -243,11 +243,14 @@
         android:title="@string/tile_options"
         android:icon="@drawable/ic_blissify_qs">
 
-    <com.bliss.support.preferences.SystemSettingSwitchPreference
+    <com.bliss.support.preferences.SystemSettingListPreference
         android:key="qs_panel_bg_use_new_tint"
         android:title="@string/qs_bg_use_new_tint"
-        android:summary="@string/qs_bg_use_new_tint_summary"
-        android:defaultValue="false" />
+        android:dialogTitle="@string/qs_bg_use_new_tint"
+        android:entries="@array/qs_tint_entries"
+        android:entryValues="@array/qs_tint_values"
+        android:summary="%s"
+        android:defaultValue="1" />
 
     <com.bliss.support.preferences.SystemSettingListPreference
         android:key="qs_label_use_new_tint"
