--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1185,11 +1185,12 @@
     <string name="qs_bg_use_fw_summary">Disable custom QS styles for external theme engines</string>
     <string name="qs_bg_accent_title">Use Accent color</string>
     <string name="qs_bg_accent_summary">Set QS background color from System Accent</string>
-    <string name="qs_bg_use_new_tint">New tint style</string>
+    <string name="qs_bg_use_new_tint">QS Tint Mode</string>
     <string name="qs_bg_use_new_tint_summary">Enable the new QS tint style</string>
     <string name="qs_tint_off">Tint Off</string>
-    <string name="qs_tint_random">Random Color</string>
-    <string name="qs_tint_accent">Accent Color</string>
+    <string name="qs_tint_random">Random Color Tint</string>
+    <string name="qs_tint_accent">Accent Color Tint</string>
+    <string name="qs_disco_mode">Qs Disco Mode</string>
 
     <!-- QS battery -->
     <string name="qs_use_status_bar_battery_style">Follow status bar style</string>
