QsBgNew : Make it toggleable for new gradient QS [2/2]
Change-Id: I664d06ba2f95b607769ea9782735a0c31e16c7cd

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1827,4 +1827,8 @@
     <string name="ime_fullscreen_summary">Allow keyboard to take up entire screen in landscape</string>
     <string name="ime_show_enter_key_title">Show enter key</string>
     <string name="ime_show_enter_key_summary">Force keyboard to show enter instead of emoticon key</string>
+
+    <!-- Gradient Panel QS Bg -->
+    <string name="qs_new_bg_title">Gradient Qs Background</string>
+    <string name="qs_new_bg_summary">Whether to enable gradient based qs panel background</string>
 </resources>
