QsLabel: random accent tint
Change-Id: Ie67796c7fc8b0c27d82954daf436610c86dba4c9

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1624,6 +1624,7 @@
     <!-- QS Label Tint -->
     <string name="qs_label_use_new_tint">QS Label Tint</string>
     <string name="qs_label_tint_off">Default</string>
+    <string name="qs_label_tint_random">Random Color Tint</string>
     <string name="qs_label_tint_accent">Accent Color Tint</string>
     <string name="qs_label_tint_gradient">Gradient Color Tint</string>
 
