--- a/res/xml/blissify_qs.xml
+++ b/res/xml/blissify_qs.xml
@@ -241,6 +241,15 @@
         android:summary="@string/qs_bg_use_new_tint_summary"
         android:defaultValue="false" />
 
+    <com.bliss.support.preferences.SystemSettingListPreference
+        android:key="qs_label_use_new_tint"
+        android:title="@string/qs_label_use_new_tint"
+        android:dialogTitle="@string/qs_label_use_new_tint"
+        android:entries="@array/qs__label_tint_entries"
+        android:entryValues="@array/qs_label_tint_values"
+        android:summary="%s"
+        android:defaultValue="1" />
+
     <com.bliss.support.preferences.SecureSettingSwitchPreference
         android:key="quick_settings_vibrate"
         android:title="@string/quick_settings_vibrate_title"
