Implement quick QS brightness slider [2/3]
Change-Id: I451196c7549276617311ab35456809a3cdbf3c5b
Signed-off-by: rohan <purohit.rohan@gmail.com>

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -507,6 +507,7 @@
     <string name="qs_brightness_slider_hide">Hide</string>
     <string name="qs_brightness_slider_top">Top</string>
     <string name="qs_brightness_slider_bottom">Bottom</string>
+    <string name="qs_brightness_slider_show_expanded">Show when expanded</string>
 
     <!-- Quick settings brightness icon -->
     <string name="brightness_icon_title">Auto brightness</string>
