--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -560,12 +560,14 @@
         <item>@string/qs_brightness_slider_hide</item>
         <item>@string/qs_brightness_slider_top</item>
         <item>@string/qs_brightness_slider_bottom</item>
+        <item>@string/qs_brightness_slider_show_expanded</item>
     </string-array>
 
     <string-array name="qs_brightness_slider_values" translatable="false">
         <item>0</item>
         <item>1</item>
         <item>2</item>
+        <item>3</item>
     </string-array>
 
     <!-- Volume steps -->
