--- a/res/xml/blissify_qs.xml
+++ b/res/xml/blissify_qs.xml
@@ -100,6 +100,8 @@
         android:title="@string/qs_brightness_slider_title"
         android:entries="@array/qs_brightness_slider_entries"
         android:entryValues="@array/qs_brightness_slider_values"
+        android:summary="%s"
+        android:dialogTitle="@string/status_bar_brightness_slider_title"
         android:defaultValue="1" />
 
     <lineageos.preference.LineageSecureSettingSwitchPreference
