Buttons: Add a summary for layout inversion
* Without the summary it might be unclear that also stuff like the IME
  switcher are affected (and for edge to edge navigation, switching
  does not show an immediate effect)

Change-Id: Ib42716634550c21394e40d884be44343d1cb1ef5

--- a/res/xml/blissify_buttons.xml
+++ b/res/xml/blissify_buttons.xml
@@ -57,6 +57,7 @@
         <com.bliss.support.preferences.SecureSettingSwitchPreference
             android:key="navbar_inverse_layout"
             android:title="@string/navigation_bar_invert_layout_title"
+            android:summary="@string/navigation_bar_invert_layout_summary"
             android:defaultValue="false" />
 
      </PreferenceCategory>
