themes: bring back the Xtended Clear theme [3/3]
Change-Id: Iaf7238813155804d95d9ea76c0559eba395e4ab3

--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -1868,6 +1868,7 @@
         <item>@string/theme_type_solarized_dark</item>
         <item>@string/theme_type_pitchblack</item>
         <item>@string/theme_type_dark_grey</item>
+        <item>@string/theme_type_xtended_clear</item>
     </string-array>
 
     <string-array name="theme_type_values">
@@ -1875,6 +1876,7 @@
         <item>1</item>
         <item>2</item>
         <item>3</item>
+        <item>4</item>
     </string-array>
 
 </resources>
