--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1741,4 +1741,6 @@
     <string name="theme_type_solarized_dark">Solarized dark</string>
     <string name="theme_type_pitchblack">Pitch black</string>
     <string name="theme_type_dark_grey">Dark Grey</string>
+    <string name="theme_type_xtended_clear">Clear Theme</string>
+
 </resources>
