--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -1868,6 +1868,7 @@
         <item>@string/theme_type_solarized_dark</item>
         <item>@string/theme_type_pitchblack</item>
         <item>@string/theme_type_dark_grey</item>
+        <item>@string/theme_type_xtended_clear</item>
     </string-array>
 
     <string-array name="theme_type_values">
@@ -1876,6 +1877,7 @@
         <item>3</item>
         <item>4</item>
         <item>5</item>
+        <item>6</item>
     </string-array>
 
 </resources>
